--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,17 @@
 			<artifactId>rxjava</artifactId>
 			<version>2.2.19</version>
 		</dependency>
+		<dependency>
+			<groupId>
+				org.apache.commons
+			</groupId>
+			<artifactId>
+				commons-lang3
+			</artifactId>
+			<version>
+				3.8.1
+			</version>
+		</dependency>
 	</dependencies>
 
 	<build>
