--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 log.type=system
 #log.type=log4j
+replication.factor=2
+replication.strategy=SYNC
+replication.strategy.quorom=1
+#spring.devtools.restart.quiet-period=5
